<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bac" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="134dp"
        android:background="@drawable/login_txt_bg1" >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="15dp"
            android:text="@string/login_name"
            android:textColor="#1e90ff"
            tools:context=".MainActivity" />

        <EditText
            android:id="@+id/username2"
            android:background="@drawable/shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="60dp"
            android:ems="10"
            android:hint="@string/inputname" >
        </EditText>
        
        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="97dp"
            android:layout_marginLeft="15dp"
            android:text="@string/login_password"
            android:textColor="#1e90ff"
            tools:context=".MainActivity" />

        <EditText
            android:id="@+id/password2"
            android:background="@drawable/shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:layout_marginLeft="60dp"
            android:ems="10"
            android:hint="@string/inputpassword" >

            <requestFocus />
        </EditText>

    </RelativeLayout>
    <RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="350dp"
    android:layout_marginLeft="40dp" >
        
           <Button               
            android:id="@+id/cansel"
            style="@style/common_button"             
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:text="@string/cansel"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/login"
            style="@style/common_button"             
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:layout_alignBaseline="@+id/cansel"
            android:layout_alignBottom="@+id/cansel"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cansel"
            android:text="@string/login"
            android:textColor="#ffffffff" />
        
        
    </RelativeLayout>

</RelativeLayout>
