<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BackGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/feiji_back_text"
            android:contentDescription="@drawable/feiji_back_text"
            android:layout_marginBottom="40dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        android:contentDescription="@drawable/logo"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/feiji_bu_new"
        style="@style/Button_Style"
        android:text="@string/NewGame" />

    <Button
        android:id="@+id/feiji_bu_score"
        style="@style/Button_Style"
        android:text="@string/Scores" />

    <Button
        android:id="@+id/feiji_bu_exit"
        style="@style/Button_Style"
        android:text="@string/ExitGame" />

</LinearLayout>